<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.essentialappsfm.sporttechniquesprinting.HelpScreen">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
        android:id="@+id/heading1"
        android:text="@string/h1"
        android:textSize="20sp"
        android:typeface="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text1"
            android:text="@string/text1"
            android:textSize="16sp"
            android:layout_below="@+id/heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/videoIntro"
            android:text="@string/intro"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:layout_below="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/videoButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/videoIntro"
            android:text="CLick to Watch"

            android:onClick="watchVideo"/>

        <TextView
            android:id="@+id/heading2"
            android:text="@string/h2"
            android:textSize="20sp"
            android:typeface="monospace"
            android:paddingTop="10dp"
            android:layout_below="@+id/videoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text2"
            android:text="@string/text2"
            android:textSize="16sp"
            android:layout_below="@+id/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/heading3"
            android:text="@string/h3"
            android:textSize="20sp"
            android:typeface="monospace"
            android:paddingTop="10dp"
            android:layout_below="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text3"
            android:text="@string/text3"
            android:textSize="16sp"
            android:layout_below="@+id/heading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>
