<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity"
    android:background="#333333">


    <Button
        android:id="@+id/button1"
        android:text="@string/newSession"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#FF6262"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="startSession" />

    <Button
        android:id="@+id/button2"
        android:text="@string/analyseVideo"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="#FF6262"
        android:layout_centerVertical="true"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="showVideos" />

    <Button
        android:id="@+id/button3"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="#FF6262"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="showHelp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="&lt;&lt;UserName>>"
        android:textColor="#FFFFFF"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
